kubernetes/rabbitmq/default-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: default-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: mq.whatsdown.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: whatsdown-rabbitmqcluster
              servicePort: 15672
